<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/btn_learn"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/btn_bg"
        android:text="@string/learn_mode"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_replace"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_above="@+id/btn_learn"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/btn_bg"
        android:text="@string/replacement_mode"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/btn_learn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/btn_bg"
        android:text="@string/setting"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/btn_setting"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/btn_bg"
        android:text="@string/exit"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_replace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:src="@drawable/images"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="33dp"
        android:text="@string/notify" />

</RelativeLayout>